[gd_scene load_steps=14 format=3 uid="uid://ck5703sajs54d"]

[ext_resource type="Script" uid="uid://b2avcj7w58m7l" path="res://FX/LaserBeam/LaserBeam.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b1p4wihahsbvo" path="res://FX/LaserBeam/glowing_circle.png" id="2"]
[ext_resource type="AudioStream" uid="uid://nmomsrcv4kn1" path="res://FX/LaserBeam/laser_beam.wav" id="3_4cd8f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oyi6q"]

[sub_resource type="Gradient" id="Gradient_1wf5k"]
colors = PackedColorArray(0.99558, 0.99558, 0.99558, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pmwjd"]
gradient = SubResource("Gradient_1wf5k")

[sub_resource type="Curve" id="Curve_b0y5p"]
_data = [Vector2(0.485981, 1), 0.0, 0.0, 0, 0, Vector2(0.990654, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7uioc"]
curve = SubResource("Curve_b0y5p")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wopuc"]
particle_flag_disable_z = true
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_7uioc")
color_ramp = SubResource("GradientTexture1D_pmwjd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_aipim"]
particle_flag_disable_z = true
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_7uioc")
color_ramp = SubResource("GradientTexture1D_pmwjd")

[sub_resource type="Curve" id="Curve_ksws7"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="CurveTexture" id="CurveTexture_q61hq"]
curve = SubResource("Curve_ksws7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6x74n"]
resource_local_to_scene = true
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape_offset = Vector3(60, 0, 0)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
initial_velocity_min = -100.0
initial_velocity_max = -80.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = 90.0
tangential_accel_max = 110.0
scale_min = 0.2
scale_max = 0.3
scale_curve = SubResource("CurveTexture_q61hq")

[node name="LaserBeam2D" type="ShapeCast2D"]
shape = SubResource("RectangleShape2D_oyi6q")
target_position = Vector2(800, 0)
collision_mask = 4
script = ExtResource("1")

[node name="FillLine2D" type="Line2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
points = PackedVector2Array(0, 0, 800, 0)
width = 20.0
default_color = Color(0.03, 0.579667, 1, 0.741176)
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 8.0
antialiased = true

[node name="FillLine2D2" type="Line2D" parent="."]
modulate = Color(2, 2, 2, 1)
position = Vector2(-3, 0)
points = PackedVector2Array(0, 0, 800, 0)
default_color = Color(0.5002, 0.56242, 0.61, 1)
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 8.0
antialiased = true

[node name="CastingParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
position = Vector2(-10, 0)
emitting = false
amount = 10
texture = ExtResource("2")
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_wopuc")

[node name="CollisionParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
position = Vector2(-10, 0)
emitting = false
amount = 20
texture = ExtResource("2")
lifetime = 0.2
local_coords = true
process_material = SubResource("ParticleProcessMaterial_aipim")

[node name="BeamParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
emitting = false
amount = 50
texture = ExtResource("2")
process_material = SubResource("ParticleProcessMaterial_6x74n")

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4cd8f")
